# eval-k-means-coresets

./: .gitignore  LICENSE  README.md  install_prerequisites.sh  pyproject.toml
bico/: premake4.lua  quickstart.cpp
bico/src/clustering/: bico.h
bico/src/experiments/: experiment.h
bico/src/misc/: stopwatch.h
bico/src/point/: point.h
data/: cluster_curves.txt  results-raw.csv
gs/: CMakeLists.txt
gs/cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake
gs/include/clustering/: cluster_assignment_list.hpp  clustering_result.hpp  kmeans.hpp  kmeans1d.hpp  local_search.hpp
gs/include/coresets/: basic.hpp  coreset.hpp  group_sampling.hpp  ray.hpp  sensitivity_sampling.hpp  stream_km.hpp
gs/include/data/: bow_parser.hpp  census_parser.hpp  covertype_parser.hpp  csv_parser.hpp  data_parser.hpp  tower_parser.hpp
gs/include/utils/: distances.hpp  random.hpp  stop_watch.hpp
gs/source/: main.cpp
gs/source/clustering/: cluster_assignment_list.cpp  clustering_result.cpp  kmeans.cpp  local_search.cpp
gs/source/coresets/: basic.cpp  coreset.cpp  group_sampling.cpp  sensitivity_sampling.cpp  stream_km.cpp
gs/source/data/: bow_parser.cpp  census_parser.cpp  covertype_parser.cpp  csv_parser.cpp  tower_parser.cpp
gs/source/utils/: random.cpp  stop_watch.cpp
kmeans/: Makefile  kmeans.h  main.cc  master.h
mt/: Makefile  mt.c
notebooks/: 01-results-latex.ipynb  02-results-plots.ipynb  03-pca-explained-variance.ipynb  04-cost-curves.ipynb
notebooks/plots/: explained-variance-plot.pdf:Zone.Identifier
rp/: Makefile  main.cpp  matrices.h  parsers.h  random_engine.h  sketches.h  stop_watch.h
xrun/: calc_cc_costs.py  calc_costs.py  eval_benchmark.py  gen.py  gen_cluster_curve.py  go.py
xrun/data/: calc_frob_diff.py  calc_nytimes_frob.py  gen_benchmark.py  loader.py  pca.py  prepare_caltech101.py  prepare_sift10m.py  remove_nans.py  run_info.py  tsvd.py
