[tool.poetry]
name = "xrun"
version = "0.1.0"
description = "Experiment Runner"
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
click = "^8.0.1"
scikit-learn = "^0.24.2"
pandas = "^1.3.0"
jupyterlab = "^3.0.16"
seaborn = "^0.11.1"
tqdm = "^4.61.2"
psutil = "^5.8.0"
scipy = "^1.7.0"
tables = "^3.6.1"
h5py = "^3.3.0"
numba = "^0.54.0"
kmeans1d = "^0.3.1"
opencv-python = "4.4.0.46"
openpyxl = "^3.0.9"
joblib = "^1.1.0"
PuLP = "^2.6.0"

[tool.poetry.dev-dependencies]
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
